2003-03-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Enable default key bindings for logon screen.
	- Better handling of logon failure when the server is down.
	- Indicate HTTP failure by disabling Post button and entry field
	and showing the HTTP error in the entry field.

2003-03-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (checkForRedirection): Handle 307 Temporary Redirect.

2003-02-28  Kevin Kenny  <kennykb@users.sourceforge.net>

	* tkchat.tcl: Added '-force' to a 'namespace import' call
	so that script reloading works again.
	
2003-02-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkchat::Init): Fix mishandling of the http_proxy
	environment variable and support Perl-ish url style value.

2003-02-18  Reinhard Max  <max@suse.de>

	* tkchat.tcl: Applied a fix from Donal K Fellows, that closes a
	huge memleak in the "Users Online" window.

2003-01-30  Kevin Kenny  <kennykb@users.sourceforge.net>

	* apps/tkchat/tkchat.tcl: Fixed a bug in the color dialog
	that caused a bgerror if any user's nick contained a period.
	Added dkf's font dialog to tkchat.tcl, to keep the "Font Family"
	menu from exceeding the screen size if many, many fonts are
	installed.
	
2003-01-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (tkchat::babelfishInit): Fixed the translation code
	for the new babelfish URLs.
	* tkchat.tcl (::tkchat::userPost): Fixed bug preventing the
	/userinfo command from being recognised when manually entered.

2003-01-17  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: change \w+ to [^ ]+ in ircbridge nick detection

2003-01-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (addMessage): show ircbridge users as <$nick> in the
	display.

2002-12-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl (alertCallback): check for focus, not grab, in the
	current toplevel window before doing wm deiconify/raise.

2002-10-29  Reinhard Max  <max@suse.de>
